# TitanicKaggle

./: .gitignore  CLAUDE.md  nextStep.md  pyproject.toml
data/: decision_tree_fitted_submission.csv  random_forest_submission.csv
documentation/: kaggle_titanic_notebook.docx  kaggle_titanic_notebook.html
notebooks/: kaggle_titanic_notebook.ipynb  survival_by_age_kaggle_titanic_notebook.ipynb  survival_by_gender_titanic_notebook.ipynb  survival_by_pclass_titanic_notebook.ipynb  titanic_ml_notebook.ipynb
src/: KaggleNotebook.ipynb  constants.py  kaggle_titanic_notebook.ipynb
src/age_group_survival/: age_group_utils.py
src/prediction_model_utils/: create_submission.py  data_massager.py  data_retriever.py
tests/: test_age_group_utils.py
