[project]
  name = "titanic-kaggle"
  version = "0.1.0"
  requires-python = ">=3.10"
  dependencies = [
      "pandas>=2.0.0",
      "matplotlib>=3.7.0",
      "jupyter>=1.0.0",
      "pytest>=7.4.0",
  ]

  [project.optional-dependencies]
  dev = [
      "ruff>=0.1.0",
      "pytest-cov>=4.1.0",
      "ipykernel>=6.25.0",
      "pandas-stubs>=2.0.0",  # Type stubs for pandas
  ]

  [tool.ruff]
  line-length = 100
  target-version = "py311"

  [tool.ruff.lint]
  select = ["E", "W", "F", "I", "B", "C4"]
  ignore = ["E501"]

  [tool.pytest.ini_options]
  testpaths = ["tests"]
  python_files = ["test_*.py"]
  addopts = "-v --strict-markers"

  [tool.coverage.run]
  source = ["src"]
  omit = ["*/tests/*", "*/test_*.py"]

  [build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"
